auto-commit for b9637e8a-24bf-4f5e-81c9-1c5734d06fc3